fix background images on mobile

--- a/src/conferences/rs/sass/components/_eventV2.sass
+++ b/src/conferences/rs/sass/components/_eventV2.sass
@@ -99,7 +99,7 @@
     border-radius: 24px
     background-size: cover
     background-repeat: no-repeat
-    background-position: center
+    background-position: 10% center
     overflow: hidden
     padding: 64px
     position: relative
@@ -109,6 +109,7 @@
       gap: 44px
       padding: 36px 24px
       border-radius: 16px
+
     &:before
       content: ''
       position: absolute
