--- a/src/conferences/rs/sass/components/_hero.sass
+++ b/src/conferences/rs/sass/components/_hero.sass
@@ -16,6 +16,8 @@
   &.hero_inner
     min-height: 30svh
     pointer-events: auto
+    +sm
+      background-position: 12% center
 
   &:after
     content: ''
